모바일버젼에서 타이틀 글씨 사이즈 작게 함

--- a/daily-frontend/src/styles/components/Content/_Contents.scss
+++ b/daily-frontend/src/styles/components/Content/_Contents.scss
@@ -28,6 +28,15 @@
             }
         }
 
+        @include media("<tablet") {
+            padding: 1rem 1rem 0;
+
+            .main-title {
+                font-size: 1.3rem;
+                margin-bottom: .5rem;
+            }
+        }
+
         @import 'MainRoute';
         @import 'WriteRoute';
         @import 'SearchRoute';
