--- a/daily-frontend/src/components/InfoLabel/InfoLabel.scss
+++ b/daily-frontend/src/components/InfoLabel/InfoLabel.scss
@@ -12,6 +12,12 @@
     .info {
         font-size: 1.5rem;
     }
+
+    @media(max-width: 767px) {
+        .info {
+            font-size: 1.15rem;
+        }
+    }
 }
 
 .info_label + .info_label {
