거래처 추가버튼 위치조정

--- a/daily-frontend/src/styles/components/Content/_WriteRoute.scss
+++ b/daily-frontend/src/styles/components/Content/_WriteRoute.scss
@@ -4,8 +4,8 @@
 			margin-bottom: 1rem;
 			> button {
 				position: absolute;
-				right: 1.5rem;
-				top: 2.4rem;
+				right: .5rem;
+				top: 1.1rem;
 			}
 		}
 		.fields {
