카테고리 모드 추가

--- a/daily-frontend/src/components/DataList/DataList.scss
+++ b/daily-frontend/src/components/DataList/DataList.scss
@@ -28,7 +28,7 @@
         .list-column:not(:first-child) {
           display: none;
         }
-        .list-column:last-child {
+        .list-column:last-child, .list-column.category {
           display: block;
         }
       }
