--- a/daily-frontend/src/styles/components/Content/_Contents.scss
+++ b/daily-frontend/src/styles/components/Content/_Contents.scss
@@ -2,7 +2,7 @@
     padding-top: $header-height;
     padding-left: $header-height;
     padding-bottom: 2rem;
-    overflow-y: auto;
+    // overflow-y: auto;
     width: 100%;
     height: 100%;
     background: lighten(gray, 42%);
