--- a/daily-frontend/src/styles/components/Content/_WriteRoute.scss
+++ b/daily-frontend/src/styles/components/Content/_WriteRoute.scss
@@ -1,11 +1,14 @@
 @include media("<=phone") {
 	.ui.form {
 		.fields:first-child {
-			margin-bottom: 1rem;
+			label:first-child {
+				display: block;
+			}
+
 			> button {
 				position: absolute;
-				right: .5rem;
-				top: 1.1rem;
+				right: 1rem;
+				top: 2.4rem;
 			}
 		}
 		.fields {
