검색된 결과 리스트가 전체화면을 늘이는 것을 방지

--- a/daily-frontend/src/styles/components/Content/_SearchRoute.scss
+++ b/daily-frontend/src/styles/components/Content/_SearchRoute.scss
@@ -3,6 +3,7 @@
 
     .search-list-wrapper {
         flex-grow: 1;
+        width: 70%;
 
         @include media("<tablet") {
             span:first-child {
