--- a/daily-frontend/src/styles/components/Content/_SearchRoute.scss
+++ b/daily-frontend/src/styles/components/Content/_SearchRoute.scss
@@ -7,6 +7,7 @@
 
         .total-price-wrapper {
             text-align: right;
+            margin-top: .5rem;
             margin-bottom: 0;
             margin-right: 1.5rem;
             font-size: 1.2rem;
@@ -22,12 +23,17 @@
         }
         
         @include media("<tablet") {
-            span:first-child {
+            > span:first-child {
                 display: none;
             }
 
             input {
                 width: 41rem;
+            }
+
+            .total-price-wrapper {
+                margin-top: 1rem;
+                margin-right: 0;
             }
         }
 
