--- a/daily-frontend/src/styles/components/Content/_StatRoute.scss
+++ b/daily-frontend/src/styles/components/Content/_StatRoute.scss
@@ -31,13 +31,18 @@
             .detail-count {
                 display: inline-block;
                 position: absolute;
+                width: 25px;
+                height: 25px;
+                text-align: center;
+                font-size: 1rem;
+                line-height: 1.6;
                 right: 1rem;
                 top: 50%;
                 background: $oc-blue-7;
                 color: white;
                 transform: translateY(-50%);
                 border-radius: 100%;
-                padding: .2rem .55rem;
+                // padding: .2rem .55rem;
             }
         }
 
