--- a/daily-frontend/src/styles/components/Orderer/_OrdererItem.scss
+++ b/daily-frontend/src/styles/components/Orderer/_OrdererItem.scss
@@ -44,3 +44,11 @@ a.orderer-item {
 .orderer-item + .orderer-item {
     border-top: 1px solid $oc-gray-7;
 }
+
+@include media("<tablet") {
+    a.orderer-item {
+        .orderer-chevron {
+            display: none;
+        }
+    }
+}
