--- a/daily-frontend/src/styles/components/Orderer/_OrdererList.scss
+++ b/daily-frontend/src/styles/components/Orderer/_OrdererList.scss
@@ -26,6 +26,10 @@
         }
     }
 
+    .orderer-selected {
+        display: none;
+    }
+
     .orderer-list-scrollbar {
         height: calc(100vh - 12rem) !important;
     }
@@ -36,6 +40,72 @@
         border-bottom: 1px solid $oc-gray-7;
 
         @import 'OrdererItem';
+    }
+
+    @include media("<tablet") {
+        float: left;
+        width: 250px;
+        height: 2.5rem;
+        // overflow: hidden;
+        position: relative;
+        display: inline-block;
+        margin-left: 1rem;
+
+        .orderer-title {
+            display: none;
+        }
+
+        .orderer-selected {
+            width: 100%;
+            height: 2.5rem;
+            display: block;
+            color: white;
+            font-weight: 700;
+            font-size: 1.1rem;
+            padding: .6rem .5rem .6rem 1rem;
+            user-select: none;
+            cursor: pointer;
+            border-radius: 4px;
+            background: rgba(white, .1);
+
+            &:hover {
+                background: rgba(white, .25);
+            }
+
+            &:after {
+                content: "▼";
+                color: white;
+                float: right;
+                font-size: .5rem;
+                margin-right: .5rem;
+            }
+
+            &:active, &.active {
+                background: rgba(white, .4);
+
+                &:after {
+                    content: "▲";
+                }
+            }
+        }
+
+        .orderer-list-scrollbar {
+            display: none;
+
+            &.active {
+                display: inline-block;
+                position: fixed;
+                top: 1px;
+                left: 0;
+                overflow: hidden;
+                height: 300px !important;
+                width: 260px !important;
+
+                .orderer-list-item {
+                    box-shadow: inset 0 15px 20px -10px rgba(white, .5);
+                }
+            }
+        }
     }
 
 }
