--- a/daily-frontend/src/styles/components/Orderer/_OrdererWidget.scss
+++ b/daily-frontend/src/styles/components/Orderer/_OrdererWidget.scss
@@ -9,6 +9,16 @@
     box-shadow: 0px 1px 8px 2px rgba(0, 0, 0, 0.7);
     z-index: 4;
 
+    @include media("<tablet") {
+        // display: none;
+        right: 0;
+        left: 0;
+        width: 100%;
+        height: 3.5rem;
+        box-shadow: 0 0 0;
+        padding-top: .5rem;
+    }
+
     @import 'OrdererAdd';
     @import 'OrdererList';
 }
