페이저 수정완료 및 각 페이지별 적용완료

--- a/daily-frontend/src/components/ListColumn/ListColumn.scss
+++ b/daily-frontend/src/components/ListColumn/ListColumn.scss
@@ -24,6 +24,10 @@
     &.red {
         color: red;
     }
+    &.no {
+        width: 3rem;
+        flex: none;
+    }
 }
 .list-column + .list-column {
     border-left: 1px solid lighten(lightgray, 5%);
