--- a/daily-frontend/src/components/Pager/Pager.scss
+++ b/daily-frontend/src/components/Pager/Pager.scss
@@ -1,2 +1,53 @@
 .pager-wrapper {
+    list-style: none;
+    text-align: center;
+    -webkit-padding-start: 0;
+
+    li {
+        display: inline-block;
+        cursor: pointer;
+        user-select: none;
+        // padding-right: 0px !important;
+    }
+    .pager-number {
+        width: 20px;
+        height: 20px;
+        border-radius: 50%;
+        border: 1px solid gray;
+        transition: all .3s ease-in-out;
+        color: black;
+
+        &:hover {
+            background: gray;
+            color: black;
+        }
+
+        &:active, &.active {
+            width: 24px;
+            height: 24px;
+            padding-top: 2px;
+            font-size: 1.2rem;
+            font-weight: 600;
+            border: 0;
+            background: black;
+            color: white;
+        }
+    }
+
+    .pager-number + .pager-number {
+        margin-left: .5rem;
+    }
+
+    .pager-first {
+        margin-right: .5rem;
+    }
+    .pager-last {
+        margin-left: .5rem;
+    }
+    .pager-prev {
+        margin-right: 1rem;
+    }
+    .pager-next {
+        margin-left: 1rem;
+    }
 }
