--- a/daily-frontend/src/styles/components/Content/_Contents.scss
+++ b/daily-frontend/src/styles/components/Content/_Contents.scss
@@ -20,14 +20,14 @@
             color: $oc-gray-8;
         }
 
-        ul {
-            -webkit-padding-start: 0;
-            padding-right: 10px !important;
+        // ul {
+        //     -webkit-padding-start: 0;
+        //     padding-right: 10px !important;
 
-            li {
-                padding-right: 20px !important;
-            }
-        }
+        //     li {
+        //         padding-right: 20px !important;
+        //     }
+        // }
 
         @include media("<tablet") {
             padding: 1rem 1rem 0;
