거래처별 정보 확인시 페이저 안보이게 하는 것 완료

--- a/daily-frontend/src/components/Pager/Pager.scss
+++ b/daily-frontend/src/components/Pager/Pager.scss
@@ -3,12 +3,16 @@
     text-align: center;
     -webkit-padding-start: 0;
 
+    &.hide {
+        display: none;
+    }
+
     li {
         display: inline-block;
         cursor: pointer;
         user-select: none;
-        // padding-right: 0px !important;
     }
+
     .pager-number {
         width: 20px;
         height: 20px;
