페이지끼리 중첩되는 것 방지

--- a/daily-frontend/src/components/Pager/Pager.scss
+++ b/daily-frontend/src/components/Pager/Pager.scss
@@ -23,6 +23,7 @@
             border-radius: 50%;
             border: 1px solid gray;
             color: black;
+            margin-right: .5rem;
 
             &:hover {
                 background: gray;
@@ -40,8 +41,8 @@
             }
         }
 
-        &.pager-number + &.pager-number {
-            margin-left: .5rem;
+        &.pager-number:last-child {
+            margin-right: 0;
         }
 
         &.pager-first, &.pager-last, &.pager-prev, &.pager-next {
