거래처별 월별 데이터합계 그래프 적용

--- a/daily-frontend/src/components/InfoList/InfoList.scss
+++ b/daily-frontend/src/components/InfoList/InfoList.scss
@@ -3,3 +3,8 @@
     margin-top: 1rem;
     padding: 0 1rem 1.5rem;
 }
+
+.orderer-graph-wrapper {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
