--- a/daily-frontend/src/styles/components/Content/_WriteRoute.scss
+++ b/daily-frontend/src/styles/components/Content/_WriteRoute.scss
@@ -8,6 +8,7 @@
 		}
 	}
 }
+
 .min-width {
 	min-width: 250px !important;
 }
@@ -45,7 +46,8 @@
 		}
 	}
 
-	.number, .number > input {
+	.number,
+	.number>input {
 		min-width: 150px !important;
 		width: 200px !important;
 	}
@@ -67,12 +69,13 @@
 				display: block;
 			}
 
-			> button {
+			>button {
 				position: absolute;
 				right: 1rem;
 				top: 2.4rem;
 			}
 		}
+
 		.fields {
 			span {
 				margin-right: 0 !important;
@@ -86,4 +89,9 @@
 			width: 100%;
 		}
 	}
+
+	.price-button {
+		padding: .5rem .5rem;
+	}
+
 }
