--- a/daily-frontend/src/styles/components/Content/_WriteRoute.scss
+++ b/daily-frontend/src/styles/components/Content/_WriteRoute.scss
@@ -36,7 +36,43 @@
 
 .write-action-btns {
   float: right;
-  margin-right: 3.5rem;
+  margin-right: 3.5rem !important;
+}
+
+.write-action-btns .field {
+  width: auto !important;
+}
+
+input[name="delivery_address"] {
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+}
+
+.addr_btn {
+  background-color: #e0e1e2;
+  color: rgba(0, 0, 0, .6);
+  border-radius: .28571429rem;
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+  margin: 0;
+  text-shadow: none;
+  font-size: 1rem;
+  cursor: pointer;
+  display: inline-block;
+  min-height: 1em;
+  outline: 0;
+  vertical-align: baseline;
+  font-family: Lato, 'Helvetica Neue', Arial, Helvetica, sans-serif;
+  padding: .78571429em 1.5em .78571429em;
+  user-select: none;
+  text-align: center;
+  width: auto;
+  font-weight: 700;
+}
+
+.ui.form .inline.fields .field {
+  width: 100%;
+  // padding: 0;
 }
 
 @include media("<tablet") {
@@ -47,7 +83,7 @@
   }
 
   .number,
-  .number > input {
+  .number>input {
     min-width: 150px !important;
     width: 200px !important;
   }
@@ -65,6 +101,7 @@
   .write-action-btns {
     justify-content: center;
     float: none;
+    margin-right: 0 !important;
   }
 }
 
@@ -75,7 +112,7 @@
         display: block;
       }
 
-      > button {
+      >button {
         position: absolute;
         right: 1rem;
         top: 2.4rem;
